[gd_scene load_steps=10 format=3 uid="uid://dkmf3r5qpjnkw"]

[ext_resource type="FontFile" uid="uid://cu3na0k3m1y15" path="res://assets/fonts/source_code_pro/SourceCodePro-Regular.ttf" id="1"]
[ext_resource type="Theme" uid="uid://bh1bkbf677702" path="res://assets/themeMobile.theme" id="1_0sjy3"]
[ext_resource type="Texture2D" uid="uid://b3f7cb0qkxjyn" path="res://assets/graphics/510.png" id="2"]
[ext_resource type="Script" path="res://ui/mobile/MobileMainPanel.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://d07ohqbtm1g7a" path="res://assets/graphics/531.png" id="5"]
[ext_resource type="PackedScene" uid="uid://dwuptfm1phnlt" path="res://ui/mobile/InventoryContainerMobile.tscn" id="6"]
[ext_resource type="PackedScene" path="res://ui/mobile/SpellContainerMobile.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://c7b4c5k2w50kv" path="res://ui/mobile/StatsBar.tscn" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)

[node name="MobileMainPanel" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 180)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -180.0
offset_right = 512.0
theme = ExtResource("1_0sjy3")
theme_override_constants/separation = 0
script = ExtResource("3")

[node name="BackgroundColor" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
color = Color(0.133333, 0.117647, 0.117647, 1)

[node name="Stats" type="VBoxContainer" parent="BackgroundColor"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StatsBarHP" parent="BackgroundColor/Stats" instance=ExtResource("8")]
layout_mode = 2

[node name="Background" parent="BackgroundColor/Stats/StatsBarHP" index="0"]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Color" parent="BackgroundColor/Stats/StatsBarHP" index="1"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0.784314, 0.121569, 0.121569, 1)

[node name="Info" parent="BackgroundColor/Stats/StatsBarHP" index="2"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0

[node name="StatsBarMP" parent="BackgroundColor/Stats" instance=ExtResource("8")]
layout_mode = 2

[node name="Background" parent="BackgroundColor/Stats/StatsBarMP" index="0"]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Color" parent="BackgroundColor/Stats/StatsBarMP" index="1"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0.0470588, 0.0235294, 0.447059, 1)

[node name="Info" parent="BackgroundColor/Stats/StatsBarMP" index="2"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0

[node name="StatsBarSTA" parent="BackgroundColor/Stats" instance=ExtResource("8")]
layout_mode = 2

[node name="Background" parent="BackgroundColor/Stats/StatsBarSTA" index="0"]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Color" parent="BackgroundColor/Stats/StatsBarSTA" index="1"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0.243137, 0.619608, 0.0862745, 1)

[node name="Info" parent="BackgroundColor/Stats/StatsBarSTA" index="2"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundColor/Stats"]
visible = false
layout_mode = 2

[node name="StatsBarSED" parent="BackgroundColor/Stats/HBoxContainer" instance=ExtResource("8")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Background" parent="BackgroundColor/Stats/HBoxContainer/StatsBarSED" index="0"]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Color" parent="BackgroundColor/Stats/HBoxContainer/StatsBarSED" index="1"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0.207843, 0.027451, 0.937255, 1)

[node name="Info" parent="BackgroundColor/Stats/HBoxContainer/StatsBarSED" index="2"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0

[node name="MarginContainer" type="MarginContainer" parent="BackgroundColor/Stats/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 40

[node name="StatsBarHAM" parent="BackgroundColor/Stats/HBoxContainer" instance=ExtResource("8")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Background" parent="BackgroundColor/Stats/HBoxContainer/StatsBarHAM" index="0"]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Color" parent="BackgroundColor/Stats/HBoxContainer/StatsBarHAM" index="1"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0.223529, 0.45098, 0.0823529, 1)

[node name="Info" parent="BackgroundColor/Stats/HBoxContainer/StatsBarHAM" index="2"]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1.0
offset_bottom = 23.0

[node name="HBoxContainer2" type="HBoxContainer" parent="BackgroundColor/Stats"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="GoldTexture" type="TextureRect" parent="BackgroundColor/Stats/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2")
stretch_mode = 3

[node name="GoldLabel" type="Label" parent="BackgroundColor/Stats/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("1")
text = "100000000000000"
clip_text = true

[node name="BtnSwitchPanel" type="TextureButton" parent="BackgroundColor/Stats/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("5")

[node name="InventoryContainerMobile" parent="." instance=ExtResource("6")]
layout_mode = 2

[node name="SpellContainerMobile" parent="." instance=ExtResource("7")]
visible = false
layout_mode = 2

[connection signal="pressed" from="BackgroundColor/Stats/HBoxContainer2/BtnSwitchPanel" to="." method="_on_BtnSwitchPanel_pressed"]

[editable path="BackgroundColor/Stats/StatsBarHP"]
[editable path="BackgroundColor/Stats/StatsBarMP"]
[editable path="BackgroundColor/Stats/StatsBarSTA"]
[editable path="BackgroundColor/Stats/HBoxContainer/StatsBarSED"]
[editable path="BackgroundColor/Stats/HBoxContainer/StatsBarHAM"]
